[package]
name = "geoarrow-rust-io"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Read and write geospatial file formats to and from GeoArrow."
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_io"
crate-type = ["cdylib"]

[features]
default = ["async"]
async = [
    "dep:futures",
    "dep:object_store",
    "dep:pyo3-object_store",
    "parquet/object_store",
    "dep:pyo3-async-runtimes",
    # "geoarrow/flatgeobuf_async",
    # "geoarrow-geoparquet/async",
    # "geoarrow/postgis",
    "dep:sqlx",
    "dep:tokio",
]

[dependencies]
arrow = { workspace = true }
bytes = "1"
futures = { version = "0.3", optional = true }
object_store = { workspace = true, features = [
    "aws",
    "azure",
    "gcp",
    "http",
], optional = true }
parquet = { workspace = true }
pyo3 = { workspace = true }
pyo3-arrow = { workspace = true }
pyo3-file = "0.13"
pyo3-geoarrow = { workspace = true }
pyo3-async-runtimes = { version = "0.25", features = [
    "tokio-runtime",
], optional = true }
geo = "0.30"
geo-traits = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-flatgeobuf = { workspace = true }
geoarrow-schema = { workspace = true }
geoparquet = { workspace = true, features = ["compression"] }
pyo3-object_store = { version = "0.5", optional = true }
serde_json = { workspace = true }
sqlx = { version = "0.7", default-features = false, features = [
    "postgres",
], optional = true }
tokio = { version = "1.9", features = ["rt"], optional = true }
url = "2.5"

# Pin to fix strange pyodide compilation errors.
# See https://github.com/geoarrow/geoarrow-rs/issues/868
cc = "1.1, <1.2"
