[package]
name = "geoarrow-rust"
version = "0.1.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
description = "Efficient, vectorized geospatial operations in Python."
readme = "README.md"
repository = "https://github.com/kylebarron/geoarrow-rs"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow", "geospatial"]
categories = ["wasm", "science::geo"]
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
# arrow-array = "48"
# arrow-buffer = "48"
# arrow = "48"
arrow-array = { git = "https://github.com/kylebarron/arrow-rs", rev="b1c43a4d9b8df8a535e12de824f80ddfa893027a" }
arrow-buffer = { git = "https://github.com/kylebarron/arrow-rs", rev="b1c43a4d9b8df8a535e12de824f80ddfa893027a" }
arrow = { git = "https://github.com/kylebarron/arrow-rs", rev="b1c43a4d9b8df8a535e12de824f80ddfa893027a", features = ["ffi"] }
pyo3 = { version = "0.20.0", features = [
    "abi3-py38",
    "multiple-pymethods",
    "hashbrown",
    "serde",
    "anyhow",
] }
geoarrow = { path = "../../", package = "geoarrow2" }
thiserror = "1"
geo = "0.26"
