
[package]
name = "geoarrow-array"
version = "0.1.0-dev"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Rust implementation of GeoArrow"
categories = ["science::geo"]
rust-version = { workspace = true }


[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
geo-traits = { workspace = true }
geozero = { workspace = true, optional = true }
geoarrow-schema = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wkb = { workspace = true }
wkt = { workspace = true }

[dev-dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
geoarrow-test = { workspace = true }
