
[package]
name = "geoarrow-array"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Rust implementation of GeoArrow"
categories = { workspace = true }
rust-version = { workspace = true }

[features]
geozero = ["dep:geozero", "dep:arrow-json"]

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-json = { workspace = true, optional = true }
arrow-schema = { workspace = true }
geo-traits = { workspace = true }
geozero = { workspace = true, optional = true }
geoarrow-schema = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wkb = { workspace = true }
wkt = { workspace = true }

[dev-dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
geoarrow-test = { workspace = true }
