[package]
name = "geoarrow-cast"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Rust implementation of GeoArrow"
categories = { workspace = true }
rust-version = { workspace = true }


[dependencies]
arrow-schema = { workspace = true }
geo-traits = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }
wkt = { workspace = true }

[dev-dependencies]
geoarrow-array = { workspace = true, features = ["test-data"] }
geoarrow-test = { workspace = true }
