[package]
name = "geoarrow-flatgeobuf"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Reader and writer for FlatGeobuf files to GeoArrow memory."
categories = { workspace = true }
rust-version = { workspace = true }

[features]
async = ["dep:futures", "dep:http-range-client"]

[dependencies]
# geo-traits = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
flatgeobuf = { workspace = true }
futures = { workspace = true, optional = true }
geoarrow-array = { workspace = true, features = ["geozero"] }
geoarrow-schema = { workspace = true }
geozero = { workspace = true }
http-range-client = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
arrow-array = { workspace = true }
wkt = { workspace = true }
