[package]
name = "geoarrow-flatgeobuf"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Reader and writer for FlatGeobuf files to GeoArrow memory."
categories = { workspace = true }
rust-version = { workspace = true }

[features]
async = [
    "dep:futures",
    "dep:http-range-client",
    "flatgeobuf/http",
    "dep:async-stream",
]
object_store = ["async", "dep:async-trait", "dep:bytes", "dep:object_store"]

[dependencies]
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true, features = ["canonical_extension_types"] }
async-stream = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
chrono = { workspace = true }
flatgeobuf = { workspace = true }
futures = { workspace = true, optional = true }
geo-traits = { workspace = true }
geoarrow-array = { workspace = true, features = ["geozero"] }
geoarrow-schema = { workspace = true }
geozero = { workspace = true }
http-range-client = { workspace = true, optional = true, default-features = false }
indexmap = { workspace = true }
object_store = { workspace = true, optional = true }

[dev-dependencies]
arrow-array = { workspace = true }
arrow-cast = { workspace = true, features = ["prettyprint"] }
object_store = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "rt-multi-thread"] }
tokio-test = "0.4"
wkt = { workspace = true }

[package.metadata.docs.rs]
all-features = true
