[package]
name = "geoarrow-geo"
version = "0.1.0-dev"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Rust implementation of GeoArrow"
categories = ["science::geo"]
rust-version = "1.82"


[dependencies]
arrow-array = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }

[dev-dependencies]
geo = { workspace = true }
