[package]
name = "geoarrow-geojson"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Write GeoArrow arrays to GeoJSON."
categories = { workspace = true }
rust-version = { workspace = true }

[dependencies]
arrow-array = { workspace = true }
arrow-json = { workspace = true }
arrow-schema = { workspace = true }
geo-traits = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }

[dev-dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
geoarrow-array = { workspace = true, features = ["test-data"] }
geojson = { workspace = true }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
