
[package]
name = "geoarrow-geoparquet"
version = "0.1.0-dev"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Rust implementation of GeoArrow"
categories = ["science::geo"]
rust-version = { workspace = true }


[features]
async = ["parquet/async", "dep:async-stream", "dep:futures"]
compression = [
    "parquet/snap",
    "parquet/brotli",
    "parquet/flate2",
    "parquet/lz4",
    "parquet/zstd",
]

[dependencies]
arrow-arith = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-ord = { workspace = true }
arrow-schema = { workspace = true }
async-stream = { workspace = true, optional = true }
bytes = { workspace = true }
futures = { workspace = true, optional = true }
geo-traits = { workspace = true }
geo-types = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1.9", features = ["macros", "fs", "rt-multi-thread"] }
