
[package]
name = "geoarrow-schema"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "GeoArrow geometry type and metadata definitions."
categories = { workspace = true }
rust-version = { workspace = true }


[dependencies]
arrow-schema = { workspace = true }
geo-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
